* Increased minimum JDK version from 11 to 17. * Added ListValidator/ListVerifier.isSorted(Comparator). * Added StringValidator/StringVerifier.isBlank(), isNotBlank()